Make sure that left button is always stuck to left

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -147,6 +147,10 @@ header svg {
 	grid-row-gap: 0px;
 }
 
+.left-button {
+	text-align: left;
+}
+
 .filter-button__area {
 	display: flex;
 	justify-content: flex-end;
